Archiving 2 files from Micro.blog.

--- a/index.html
+++ b/index.html
@@ -31,39 +31,39 @@
 
 		<div class="e-content">
 			 <p>They say you cannot cross the same Shatun twice.</p>
-<p>The land was treacherous – not cursed, but mercurial. It did not hold still. Hills sank in a day. Rivers rose where desert dust still clung to your boots. You could fall asleep in a lush oasis and wake among stones that remembered the ocean.</p>
-<p>Most travellers went the long way around, even if it took weeks. Crossing Shatun took days – if you survived. There was only one way through: with a warden. They lived at the edges of the land, watching it, charging dearly, promising nothing.</p>
-<p>I crossed not because I wanted to, but because I was commanded. Kings are fond of straight lines.</p>
-<p>Chang, my warden, took my payment without a word. We prayed at the crossing. I looked back at civilisation – its houses bright, untroubled – and followed him into the blur.</p>
+<p>The land was treacherous and mercurial. It did not hold still. Hills sank in a day. Rivers rose where desert was. You could fall asleep in a lush oasis and wake among stones that remembered the ocean.</p>
+<p>Most travellers went the long way around, even if it took weeks. Crossing Shatun took days – if you survived.</p>
+<p>I crossed because I was commanded. “There is no known map,” the king said. “But you must arrive.” Kings are fond of straight lines.</p>
+<p>At the border, I met Chang, a Shatun warden.  They lived at the edges of the land, watching it, charging dearly, promising nothing. When I asked if he knew the way, he only kept silent.</p>
+<p>We prayed before the crossing. I looked back one last time at civilisation – its houses bright, untroubled – and followed him into the blur.</p>
 <h3 id="where-the-ground-forgets">Where the ground forgets</h3>
-<p>The land shifted around us like a mind revising a thought. Green grass into black sand, cherry trees blooming against snow walls, sunlight breaking through sudden sleet. Whenever I turned, the ground behind us was already changed, our footprints disappearing, as if the land refused them.</p>
+<p>The land shifted around us like a changing mind. Green grass turned into black sand, cherry trees bloomed against snow walls, sunlight broke through the sudden sleet. Whenever I turned, the ground behind us was already changed, our footprints erased, the land refusing them.</p>
 <p>Looking ahead was no help. The horizon dissolved, hidden by fog, glare, or drifting sand.</p>
-<p>“Stay close,” Chang said. “If you stray, I cannot find you.”</p>
-<p>I watched how he walked. Sometimes he strode forward with certainty. Sometimes he tested the ground with small, careful steps. Sometimes he stopped altogether, staff planted, as if listening to something beneath sound.</p>
-<p>Once we stood so long that I was sure we were lost.</p>
-<p>I remembered stories then – of men who’d entered Shatun and were found centuries later, unmarked by time, still searching for home.</p>
+<p>Chang walked ahead, then stopped. The earth beneath us softened and began to slide.</p>
+<p>“Which way?” I asked.</p>
+<p>He did not answer.</p>
+<p>I stepped forward, uncertain. The ground held. Chang followed.</p>
+<p>After that, he kept his distance. When he stopped, the land grew restless. Only when one of us moved did it settle again.</p>
+<p>I don’t know how Chang found his bearings in this inconstant land. Sometimes he strode forward with certainty. Sometimes he tested the ground with small, careful steps. Sometimes he stopped altogether, staff planted, waiting.</p>
+<p>I remembered stories then, of men who’d entered Shatun and were found centuries later, unmarked by time, still searching for home.</p>
 <p>“Is it true?” I asked.</p>
-<p>Chang nodded once. “Some stay.”</p>
-<p>That first night, the land offered us a clearing. Trees towered above us, the songs of insects, and a distant bird call. We made a small fire. Though it had only been a day, my head swam, as if part of me lagged a step behind the rest. For a moment, I wondered if we’d already crossed into the spirit lands.</p>
+<p>Chang waited. I stepped forward. He nodded.</p>
+<p>That first night, the land offered us a clearing. We made a small fire. Though it had only been a day, my head swam, as if part of me lagged a step behind the rest. For a moment, I wondered if we’d already crossed into the spirit lands.</p>
 <p>Chang pressed a bowl of hot porridge into my hands.</p>
 <p>“Eat,” he said. “It will bring you back to yourself.”</p>
 <p>Rainbows across the night sky, unmoored from rain or sun, dancing to an unheard melody.</p>
 <h3 id="paying-the-price">Paying the price</h3>
-<p>On the third day, we crossed a swamp that carded into stone. Chang stopped so suddenly that I nearly collided with him. He drove his staff into the ground as if planting himself into the earth.</p>
-<p>“Hold your ground,” he said. “Show no fear.” Not loud. But urgently.</p>
-<p>Wolves emerged from the fog. Two, then more, until there were six. They were enormous, coats white as snow, eyes burning red with inhuman intelligence.</p>
+<p>On the third day, we crossed a swamp that hardened into stone. Chang stopped so suddenly that I nearly collided with him. He drove his staff into the ground as if anchoring himself into the earth.</p>
+<p>Wolves emerged from the fog. Two, then more, until there were six. They were enormous, their outlines constantly shifting. They did not step as much as ripple across the terrain.</p>
 <p>The wolves advanced.</p>
-<p>My legs froze.</p>
-<p>Chang stepped forward.</p>
-<p>They stopped.</p>
-<p>For a long moment, nothing happened. Then the lead wolf lowered its head, its gaze fixed not on Chang, but on me.</p>
-<p>I felt pressure then. Not malice, but attention. As if something were being weighed.</p>
-<p>“He only wishes to pass,” Chang said.</p>
-<p>The lead wolf took a step closer. The world narrowed. I could no longer feel my hands.</p>
-<p>Chang did not turn. “Hold,” he said. “Or it will take more than it should.”</p>
-<p>I did not know what he meant. I only knew that something in me was loosening, like a knot being worked at.</p>
-<p>The wolf’s breath on my leg. There was no pain, only a brief sense that something small but necessary had been lifted away.</p>
-<p>Then the wolves stepped back.</p>
+<p>Chang did not move.</p>
+<p>The ground rumbled. The wolves came closer.</p>
+<p>No sign. No instruction.</p>
+<p>I stepped forward and planted my feet, forcing my shivering fingers into fists.</p>
+<p>The wolves stopped.</p>
+<p>The lead wolf lowered its head, its gaze fixed not on Chang, but on me. Its eyes hollows of dark water. I felt pressure then. Not malice, but attention. As if something were being weighed.</p>
+<p>Something loosened inside me. There was no pain, only a brief sense that something small but important had been lifted away.</p>
+<p>Then the wolves flowed back.</p>
 <p>One by one, they withdrew, slipping into the fog without sound. The lead wolf lingered last. It looked at Chang, then at me, as if to mark us. Then it turned and was gone.</p>
 <p>My legs gave way. I collapsed to the ground, shaking. Chang knelt beside me and held out his canteen. His hand trembled once before it steadied.</p>
 <p>“They are done,” he said.</p>
@@ -75,9 +75,10 @@
 <p>On the fifth morning, the horizon returned. Flat green fields stretched outward, the sky so close it seemed within reach, the sun warm on my fingers.</p>
 <p>“This is where we part,” Chang said.</p>
 <p>I bowed. “How did you know the way? I never saw a path.”</p>
-<p>Chang smiled, just once. “There was no path,” he said. “Only walking.”</p>
+<p>Chang smiled then, just the once. “There was no path,” he said. “Only walking.”</p>
 <p>He turned and walked back toward Shatun, his figure dissolving into the mist.</p>
-<p>I stood there for a moment, then chose a direction and began.</p>
+<p>I chose a direction and began.</p>
+<p><em>This story is inspired by Antonio Machado’s poem “Proverbios y cantares (XXIX)”, often translated as “Traveller, there is no path.”</em></p>
 
 		</div>
 	  </div>
