Archiving 2 files from Micro.blog.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 <p>“Which way?” I asked.</p>
 <p>He did not answer.</p>
 <p>I stepped forward, uncertain. The ground held. Chang followed.</p>
-<p>After that, he kept his distance. When he stopped, the land grew restless. Only when one of us moved did it settle again.</p>
 <p>I don’t know how Chang found his bearings in this inconstant land. Sometimes he strode forward with certainty. Sometimes he tested the ground with small, careful steps. Sometimes he stopped altogether, staff planted, waiting.</p>
 <p>I remembered stories then, of men who’d entered Shatun and were found centuries later, unmarked by time, still searching for home.</p>
 <p>“Is it true?” I asked.</p>
@@ -59,7 +58,7 @@
 <p>Chang did not move.</p>
 <p>The ground rumbled. The wolves came closer.</p>
 <p>No sign. No instruction.</p>
-<p>I stepped forward and planted my feet, forcing my shivering fingers into fists.</p>
+<p>I stepped forward and planted my feet, forcing my shivering hands into fists.</p>
 <p>The wolves stopped.</p>
 <p>The lead wolf lowered its head, its gaze fixed not on Chang, but on me. Its eyes hollows of dark water. I felt pressure then. Not malice, but attention. As if something were being weighed.</p>
 <p>Something loosened inside me. There was no pain, only a brief sense that something small but important had been lifted away.</p>
@@ -590,7 +589,7 @@
 			 <p>It was a bright, busy Saturday morning. We wandered through the mall, our son darting ahead, and our daughter nestled in our arms. As we walked into the LEGO store, their eyes lit up. They always loved playing with the loose bricks near the front.</p>
 <p>I’d held off on buying a set since our son was born. He’d been too small for the tiny bricks. But now he was nearing three, and I thought maybe – just maybe – we could build something together. I chose a sleek maroon starfighter. Even if we fumbled through it, it’d be a fun way to spend the afternoon.</p>
 <p>Just a few hours later, I was lying beneath fluorescent lights in the Intensive Care Unit. My heart had been racing above 150 beats per minute for over an hour. It wasn’t slowing down.</p>
-<p>I didn’t know what was happening – if this seemingly ordinary day would become my last. It wasn’t dying that scared me. It was the possibility that I might never see our children grow up.</p>
+<p>I didn’t know what was happening or if this seemingly ordinary day would become my last. I wasn’t afraid of dying. But I was terrified I’d never see my children grow up.</p>
 <p>I texted my wife from the hospital bed: <em>I’ve always wanted to tell our children I’d love them, no matter what.</em> They were too young to understand it now. But if I couldn’t be there to say it myself, I hoped the message would find its way to them someday.</p>
 <p>As it turned out, the spike in my heart rhythm was treatable and not life-threatening. I was discharged a day later, fazed but grateful.</p>
 <p>A week passed.</p>
