Archiving 2 files from Micro.blog.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 <p>They led her beneath the city to the Chronovore. They explained to her that if she joined with it, the city would become whole again. But there would be a price: she would never change. She would be constant, eternal.</p>
 <p>She hesitated. Above, the city was failing. She’d heard the cries of babies whose mothers didn’t know when to feed them. She knew the trains no longer ran.</p>
 <p>She stepped inside the Chronovore, and it closed behind her. Wires of brass and silver wrapped themselves around her wrists. The great clock gasped, and the city’s clocks restarted themselves. Bells rang in harmony. The people knew when they were again.</p>
+<h3 id="when">When</h3>
 <p>It was quiet inside the machine.</p>
 <p>The girl felt her breath soften and her shoulders loosen. For the first time, she didn’t feel like she was arriving too early or leaving too late.</p>
 <p>She realised: <em>this is what they feel like.</em></p>
@@ -59,14 +60,14 @@
 <p>She waited.</p>
 <p>As time passed, she noticed something small. A thinning. As if the space between moments had grown narrow, leaving no room to push, to wonder, to change her mind.</p>
 <p>Above her, the city breathed deeply.</p>
-<p>A doubt arose in her mind, and it caused a tremor through the city. She lifted a finger, just to see if she could, and the city’s clocks skipped a beat.</p>
+<p>A doubt arose in her mind, and it caused a tremor through the city. She lifted a finger, just to see if she still could, and the city’s clocks skipped a beat.</p>
 <p>“Please,” the people said. “Stay.”</p>
 <p>The Chronovore didn’t speak. It only held her more closely.</p>
-<p>The girl remembered running to get a slice of bread, not because it was planned, but <em>because</em> it wasn’t planned. She remembered laughing, even when she wasn’t supposed to. She remembered how it felt to dance to birdsong when the moment moved her.</p>
+<p>The girl remembered running to get a slice of bread, not because it was planned, but <em>because</em> it wasn’t. She remembered laughing at her little sister’s babbling, even when it was the quiet hour. She remembered how it felt to dance to birdsong when the moment, not the clock, moved her.</p>
 <p>She slipped her wrists free and stepped out of the machine.</p>
 <p>Bells rang unevenly throughout the city. Clocks stuttered. The ground shook. Bridges swayed. People ran, calling for the time.</p>
 <p>The Chronovore shuddered and fell back into itself, unfinished. It sighed, then returned to sleep and waiting.</p>
-<p>The girl walked out. She walked past the great clock, silent and cold. She walked past the bakery, shuttered and closed. She walked past the school, quiet without classes. And she walked until the city of clocks was a shadow on the horizon behind her.</p>
+<p>The girl walked out. She walked past the great clock, silent and cold. She walked past the bakery, shuttered and closed. She walked past the school, quiet without classes. And she walked until the city of clocks was a shadow on the horizon.</p>
 <h3 id="then">Then</h3>
 <p>Some people learned to live – in time. Bread burned, until the bakers learnt how to watch it instead of the clock. Children knew when to go home by the fading sun. Some clocks were taken down and turned into other things. Some were left where they’d fallen.</p>
 <p>And sometimes, when a meeting failed to happen, or a train arrived too early or too late, someone would say that once, the city almost became perfect again.</p>
